<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="167dp"
        android:layout_height="653dp"
        android:contentDescription="@string/sidestrip"
        android:scaleX="1"
        android:scaleY="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205"
        app:srcCompat="@drawable/sidestrip"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="211dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="#E4E4E4"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/digite_seu_telefone"
        android:inputType="phone"
        android:textColor="#232323"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E4E4E4"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/digite_uma_senha"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:textColor="#151515"
        android:textColorHint="#757575"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextNumberPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#E4E4E4"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/confirme_a_senha"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:textColor="#232323"
        android:textColorHint="#757575"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:background="#E4E4E4"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/digite_seu_endere_o_completo"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:textColor="#232323"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.559"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="#FFEB3B"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="text"
        android:isScrollContainer="false"
        android:text="@string/novo_cadastro1"
        android:textColor="#5B5C5C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="#252222"
        android:backgroundTint="#3E3838"
        android:fontFamily="sans-serif-medium"
        android:text="CANCELAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="99dp"
        android:layout_height="58dp"
        android:text="SALVAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

</androidx.constraintlayout.widget.ConstraintLayout>